--- a/MakeAMesh/MakeAMesh.csproj
+++ b/MakeAMesh/MakeAMesh.csproj
@@ -50,14 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkRequest\BulkRequestService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RhinoCompute.cs" />
+    <Compile Include="Secrets.cs" />
+    <Compile Include="Objects\FunctionPayloadReference.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Rhino3dmIO.Desktop.6.2.18065.11031\build\net45\Rhino3dmIO.Desktop.targets" Condition="Exists('packages\Rhino3dmIO.Desktop.6.2.18065.11031\build\net45\Rhino3dmIO.Desktop.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
