--- a/samples/MakeAMesh/MakeAMesh.csproj
+++ b/samples/MakeAMesh/MakeAMesh.csproj
@@ -51,18 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\RhinoCompute\RhinoCompute.cs">
+      <Link>RhinoCompute.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RhinoCompute\RhinoCompute.csproj">
-      <Project>{d4941ee3-70fc-4547-be0e-40d646bdb45e}</Project>
-      <Name>RhinoCompute</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Rhino3dmIO.Desktop.6.8.18240.20051\build\net45\Rhino3dmIO.Desktop.targets" Condition="Exists('packages\Rhino3dmIO.Desktop.6.8.18240.20051\build\net45\Rhino3dmIO.Desktop.targets')" />
