--- a/samples/BrepBooleanOperation/BrepBooleanOperation.csproj
+++ b/samples/BrepBooleanOperation/BrepBooleanOperation.csproj
@@ -4,12 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{811BAA1D-08A3-4608-8778-296046D6A7FF}</ProjectGuid>
+    <ProjectGuid>{14C9031A-219E-4560-B670-A0C373393B8D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CircleIntersection</RootNamespace>
-    <AssemblyName>CircleIntersection</AssemblyName>
+    <RootNamespace>BrepBooleanOperation</RootNamespace>
+    <AssemblyName>BrepBooleanOperation</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
@@ -33,20 +35,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Rhino3dmIO, Version=6.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rhino3dmIO.Desktop.6.10.18308.14011\lib\net45\Rhino3dmIO.dll</HintPath>
+      <HintPath>..\packages\Rhino3dmIO.Desktop.6.11.18348.17061\lib\net45\Rhino3dmIO.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,20 +64,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Rhino3dmIO.Desktop.6.8.18240.20051\build\net45\Rhino3dmIO.Desktop.targets" Condition="Exists('packages\Rhino3dmIO.Desktop.6.8.18240.20051\build\net45\Rhino3dmIO.Desktop.targets')" />
+  <Import Project="..\packages\Rhino3dmIO.Desktop.6.11.18348.17061\build\net45\Rhino3dmIO.Desktop.targets" Condition="Exists('..\packages\Rhino3dmIO.Desktop.6.11.18348.17061\build\net45\Rhino3dmIO.Desktop.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Rhino3dmIO.Desktop.6.10.18308.14011\build\net45\Rhino3dmIO.Desktop.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Rhino3dmIO.Desktop.6.10.18308.14011\build\net45\Rhino3dmIO.Desktop.targets'))" />
+    <Error Condition="!Exists('..\packages\Rhino3dmIO.Desktop.6.11.18348.17061\build\net45\Rhino3dmIO.Desktop.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Rhino3dmIO.Desktop.6.11.18348.17061\build\net45\Rhino3dmIO.Desktop.targets'))" />
   </Target>
-  <Import Project="..\packages\Rhino3dmIO.Desktop.6.10.18308.14011\build\net45\Rhino3dmIO.Desktop.targets" Condition="Exists('..\packages\Rhino3dmIO.Desktop.6.10.18308.14011\build\net45\Rhino3dmIO.Desktop.targets')" />
 </Project>
